--- a/www/css/main.css
+++ b/www/css/main.css
@@ -18,8 +18,8 @@ body {
 }
 
 #barChart{
-    margin-top: 0vh;
-    margin-left: -5vw;
+    margin-top: 3vh;
+    margin-left: -6vw;
 }
 
 .data-container {
@@ -30,7 +30,7 @@ body {
 
 #dropdown2dviews {
     height: 2%;
-    width: 20% !important;
+    width: 25% !important;
     display: block;
     position: absolute;
     bottom: 0;
@@ -46,8 +46,8 @@ body {
 
 
 #forgeViewer {
-    height: 47% !important;
-    width: 45% !important;
+    height: 47vh !important;
+    width: 45vw !important;
     display: block;
     position: absolute;
     bottom: 0;
@@ -62,8 +62,8 @@ body {
 }
 
 #viewerSecondary {
-    height: 47% !important;
-    width: 45% !important;
+    height: 47vh !important;
+    width: 45vw !important;
     display: block;
     position: absolute;
     bottom: 0;
@@ -79,8 +79,8 @@ body {
 
 
 #positionCharts {
-    height: 96% !important;
-    width: 25% !important;
+    height: 96vh !important;
+    width: 25vw !important;
     display: block;
     position: absolute;
     bottom: 0;
