adding cache false to tree for ie11 fix

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -72,6 +72,10 @@ html, body {
     overflow: hidden;
 }
 
+body {
+    padding-top: 4%; /* space for the top nav bar */
+}
+
 svg{
     width: 530px !important;
     height: 490px !important;
