--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,5 +1,6 @@
 body {
     padding-top: 3%; /* space for the top nav bar */
+    font-size: 14px !important;
 }
 
 #pieChart > p{
@@ -65,6 +66,99 @@ and (orientation : portrait) {
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
 
+html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    padding-top: 5%; /* space for the top nav bar */
+    font-size: 10px !important;
+}
+
+.button-ipad{
+    margin-top: 80%;
+}
+
+svg{
+    width: 140% !important;
+    height: 80% !important;
+   /* width: 530px !important;
+    height: 490px !important;*/
+    overflow: auto;
+}
+.data-container {
+    height: calc(100vh - 55px);
+    width: calc(30vw - 36px);
+    overflow: auto;
+}
+
+.report-dropdowns {
+    margin-left: 2%;
+    padding-top: 2%;
+    font-size: 7px !important;
+    visibility: hidden;   
+}
+
+
+#pieChart {
+    height: 300px
+}
+
+.svgcanvas{
+    margin-left: 2%;
+}
+
+#dropdown2dviews {
+    height: 2%;
+    width: 40% !important;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    top: 51vh;
+    left: 28%;
+    right: 0;
+    z-index: 2;
+    visibility: hidden;
+}
+
+
+#forgeViewer {
+    height: 47% !important;
+    width: 45vw !important;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    top: 4%;
+    left: 28%;
+    right: 0;
+    
+}
+
+#viewerSecondary {
+    height: 47% !important;
+    width: 45vw !important;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    top: 53vh;
+    left: 28%;
+    right: 0;
+    
+}
+
+#positionCharts {
+    height: 92vh !important;
+    width: 27vw !important;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 73%;
+    top: 8%;
+    right: 0;
+    overflow: auto;
+}
+
 }
 
 
@@ -79,12 +173,15 @@ html, body {
 }
 
 body {
-    padding-top: 3%; /* space for the top nav bar */
+    padding-top: 5%; /* space for the top nav bar */
+   font-size: 12px !important;
 }
 
 svg{
-    width: 530px !important;
-    height: 490px !important;
+    width: 100% !important;
+    height: 40% !important;
+   /* width: 530px !important;
+    height: 490px !important;*/
 }
 .data-container {
     height: calc(100vh - 55px);
@@ -92,14 +189,16 @@ svg{
     overflow: auto;
 }
 
+
 .report-dropdowns {
-    margin-left: 4%; 
+    margin-left: 7.5%;
+    padding-top: 2%;
+    font-size: 8px !important;
     visibility: hidden;   
 }
 
-
 .svgcanvas{
-    margin-left: 0;
+    margin-left: 2%;
 }
 
 #dropdown2dviews {
@@ -149,6 +248,7 @@ svg{
     left: 67%;
     top: 6%;
     right: 0;
+    overflow: auto;
 }
 }
 
@@ -163,6 +263,11 @@ html, body {
     overflow: hidden;
 }
 
+body {
+   padding-top: 4%; /* space for the top nav bar */  
+   font-size: 14px !important;
+}
+
 svg{
     width: 530px !important;
     height: 490px !important;
@@ -174,13 +279,15 @@ svg{
 }
 
 .report-dropdowns {
-    margin-left: 4%; 
+    margin-left: 4%;
+    padding-top: 1%;
+    font-size: 12px !important;
     visibility: hidden;   
 }
 
 
 .svgcanvas{
-    margin-left: 0;
+    margin-left: -5%;
 }
 
 #dropdown2dviews {
@@ -230,6 +337,7 @@ svg{
     left: 67%;
     top: 6%;
     right: 0;
+    overflow: auto;
 }
 }
 
@@ -243,6 +351,12 @@ html, body {
     overflow: hidden;
 }
 
+
+body {
+   padding-top: 3%; /* space for the top nav bar */  
+   font-size: 14px !important;
+}
+
 svg{
     width: 530px !important;
     height: 490px !important;
@@ -254,13 +368,15 @@ svg{
 }
 
 .report-dropdowns {
-    padding-left: 2%; 
+    margin-left: 5%;
+    padding-top: 1%;
+    font-size: 14px !important;
     visibility: hidden;   
 }
 
 
 .svgcanvas{
-    padding-left: 5%;
+    margin-left: 2%;
 }
 
 #dropdown2dviews {
