adding new layout and 3 graphs, still cleaning code for tutorial

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,6 @@
 
 body {
   padding-top: 60px; /* space for the top nav bar */
-  margin-right: 30px;
 }
 
 #userHubs {
@@ -24,4 +23,18 @@ body {
 
 .dashboardPanel {
   width: 100%;
+  padding: 3%;
+}
+
+#familyTypePieChart{
+  display: block;
+}
+
+
+#familyTypeBarChart{
+  display: block;
+}
+
+#familyTypeBubbleChart{
+  display: block;
 }
