--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,11 @@
 ﻿html, body {
   min-height: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .fill {
-  height: calc(100vh - 100px);
+  height: calc(100vh - 80px);
 }
 
 .transition-width {
@@ -19,7 +20,7 @@ body {
 #userHubs {
   overflow: auto;
   width: 100%;
-  height: calc(100vh - 150px);
+  height: calc(100vh - 115px);
 }
 
 #forgeViewer {
@@ -28,7 +29,7 @@ body {
 
 #dashboard {
   overflow: auto;
-  height: calc(100vh - 90px);
+  height: calc(100vh - 80px);
 }
 
 .dashboardPanel {
